--- a/Grover_example_CVC.ipynb
+++ b/Grover_example_CVC.ipynb
@@ -27,7 +27,7 @@
         "We need to install:\n",
         "\n",
         "*   Qiskit itself\n",
-        "*   Qiskit Aer, a simulator (basically, this package will run our desired algorithm a high number of times in order to gather statistics on the results)\n",
+        "*   Qiskit Aer, a simulator (basically, this package will run our desired algorithm a very large number of times in order to gather statistics on the results)\n",
         "\n"
       ],
       "metadata": {
